<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="Typos">INFO6130-Lab1</string>
    <string name="created_by_krunal_shah">Created by Krunal Shah</string>
    <string name="take_survey">Take Survey</string>
    <string name="instructions">Instructions</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="level_1">Level 1</string>
    <string name="level1Data">Immediate Gratification: Pleasure and minimize pain</string>

    <string name="level_2">Level 2</string>
    <string name="level2Data">Comparative/Personal Achievement: Ego Centeredness, better than, gain advantage</string>

    <string name="level_3">Level 3</string>
    <string name="level3Data">Contributive: Do good beyond self, Make an optimal positive difference for others</string>

    <string name="level_4">Level 4</string>
    <string name="level4Data">Ultimate Good: Participate in giving and receiving ultimate meaning, goodness, ideals and love</string>
    <string name="please_make_a_choice">Please make a choice</string>
</resources>